test_data/neg/ss/655291/Windows/655291.acc_simp.rtf
>655291
MKKRYKVTALFEDGTSQCLVVGNFSSPTNAWCAAMRNLTPEGIARVQHYNVEEISK
EEEEMEBMBMBEEEEMMBMBMBEBEMEBEEBBEMBEEMEEEMMEEBEEMEMEEEEE
